--- a/index.html
+++ b/index.html
@@ -1,4 +1,34 @@
 <!DOCTYPE html>
-<html>
-<h1>Hello World>
+<html lang="en">
+<body>
+  <h1>Hello World</h1>
+  <a href="https://lazymc.online">Visit LazyMC</a>
+  <img scr="https://lazymc.online/images/Akane2.webp" alt="Akane_pic_1 width="650" height="1477">
+  <p style="color:red;">"This is a red paragraph"</p>
+  <p title="This is a tooltip??">"Hey look at here"</p>
+  <h1 style="font-size:120px;">"I can control the size of the title.</h1>
+  <pre>
+    Here are some style you can use on texts, such as the one above.
+    - font-size:120px; (Or 300%)
+    - background-color:powderblue;
+    - color:blue;
+    - font-family:verdana;
+    - text-align:center;
+    
+    
+  </pre>
+  <hr>
+  <p>"hr add some lines in between lines"</p>
+  <p>"Adding br breaks lines as you know"</p>
+  <pre>
+    But if you use pre then all the format will be the same 
+
+    as how you typed it
+
+    :/
+  </pre>
+  
+  
+  
+</body>
 </html>
