--- a/index.html
+++ b/index.html
@@ -26,9 +26,31 @@
     as how you typed it
 
     :/
+
+  "<b> - Bold text
+  <strong> - Important text
+  <i> - Italic text
+  <em> - Emphasized text
+  <mark> - Marked text
+  <small> - Smaller text
+  <del> - Deleted text
+  <ins> - Inserted text
+  <sub> - Subscript text
+  <sup> - Superscript text"
+  
   </pre>
-  
-  
-  
+  <p style:"background-color:rgba(100,49,194, 0.5);">"This is trasparent by doing background-color:rgba(100,49,194, 0.5);"</p>
+  <p>"And hex is this: #hexcode"</p>
+  <p style:"background-color:hsl(310, 67%, 50%)">"hsl(hue1-360, saturation 1-100%, lightness 1-100%)"</p>
+  <pre href="https://www.w3schools.com/html/html_css.asp">
+    Inline - by using the style attribute inside HTML elements
+    Internal - by using a style element in the head section
+    External - by using a link element to link to an external CSS file
+  </pre>
+  <p>"There are something called a absolute url and a relative url, a absolute url will take you away to another website like this:</p>
+  <p href="https://lazymc.online">"LazyMC</p>
+  <p>"But a relative url is when a url is inside your website, like this:</p>
+  <p>**NOT WORKING RN**</p>
+  <p>Itzlazzzy, if you are reading this, please challenge yourself to make: <br>- Use images as url<br>- Link to an email adress<br>- button as link</p>
 </body>
 </html>
