--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
   <h1>Hello World</h1>
   <a href="https://lazymc.online">Visit LazyMC</a>
   <img scr="https://lazymc.online/images/Akane2.webp" alt="Akane_pic_1 width="650" height="1477">
-  <p style="color:red;">"This is a red paragraph"</p>
-  <p title="This is a tooltip??">"Hey look at here"</p>
-  <h1 style="font-size:120px;">"I can control the size of the title.</h1>
+  <p style="color:red;">This is a red paragraph</p>
+  <p title="This is a tooltip??">Hey look at here</p>
+  <h1 style="font-size:120px;">I can control the size of the title.</h1>
   <pre>
     Here are some style you can use on texts, such as the one above.
     - font-size:120px; (Or 300%)
@@ -18,8 +18,8 @@
     
   </pre>
   <hr>
-  <p>"hr add some lines in between lines"</p>
-  <p>"Adding br breaks lines as you know"</p>
+  <p>hr add some lines in between lines</p>
+  <p>Adding br breaks lines as you know</p>
   <pre>
     But if you use pre then all the format will be the same 
 
@@ -27,7 +27,7 @@
 
     :/
 
-  "<b> - Bold text
+  <b> - Bold text
   <strong> - Important text
   <i> - Italic text
   <em> - Emphasized text
@@ -36,20 +36,20 @@
   <del> - Deleted text
   <ins> - Inserted text
   <sub> - Subscript text
-  <sup> - Superscript text"
+  <sup> - Superscript text
   
   </pre>
-  <p style:"background-color:rgba(100,49,194, 0.5);">"This is trasparent by doing background-color:rgba(100,49,194, 0.5);"</p>
-  <p>"And hex is this: #hexcode"</p>
-  <p style:"background-color:hsl(310, 67%, 50%)">"hsl(hue1-360, saturation 1-100%, lightness 1-100%)"</p>
+  <p style:"background-color:rgba(100,49,194, 0.5);">This is trasparent by doing background-color:rgba(100,49,194, 0.5);</p>
+  <p>And hex is this: #hexcode"</p>
+  <p style:"background-color:hsl(310, 67%, 50%)">hsl(hue1-360, saturation 1-100%, lightness 1-100%)</p>
   <pre href="https://www.w3schools.com/html/html_css.asp">
     Inline - by using the style attribute inside HTML elements
     Internal - by using a style element in the head section
     External - by using a link element to link to an external CSS file
   </pre>
-  <p>"There are something called a absolute url and a relative url, a absolute url will take you away to another website like this:</p>
-  <p href="https://lazymc.online">"LazyMC</p>
-  <p>"But a relative url is when a url is inside your website, like this:</p>
+  <p>There are something called a absolute url and a relative url, a absolute url will take you away to another website like this:</p>
+  <p href="https://lazymc.online">LazyMC</p>
+  <p>But a relative url is when a url is inside your website, like this:</p>
   <p>**NOT WORKING RN**</p>
   <p>Itzlazzzy, if you are reading this, please challenge yourself to make: <br>- Use images as url<br>- Link to an email adress<br>- button as link</p>
 </body>
