teaching joy copilot

--- a/joy.html
+++ b/joy.html
@@ -1,6 +1,19 @@
 <!DOCTYPE html>
-<html>
-    <body>
-        <p style="color:palegreen",font-family:verdana>Hello</p>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Starter Page</title>
+</head>
+<body>
+  <header>
+    <h1>Welcome to Your Page</h1>
+  </header>
+  <main>
+    <p>This is the main content area.</p>
+  </main>
+  <footer>
+    <p>&copy; 2025 Your Name</p>
+  </footer>
+</body>
 </html>
