starting to code it

--- a/joy.html
+++ b/joy.html
@@ -1,19 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Starter Page</title>
 </head>
 <body>
   <header>
-    <h1>Welcome to Your Page</h1>
+    <h1></h1>
   </header>
   <main>
-    <p>This is the main content area.</p>
+    <pre>
+        Welcome to Echobeads!
+        We handcraft unique jewelry using quality beads and a lot of creativity. Each bracelet is designed to reflect personal style and positive energy. Whether you love bright colors or something subtle and minimal, you’ll find a little echo of yourself in every piece we make.<br>
+    </pre>
   </main>
-  <footer>
-    <p>&copy; 2025 Your Name</p>
-  </footer>
 </body>
 </html>
