--- a/joy.html
+++ b/joy.html
@@ -10,7 +10,7 @@
   <main>
     <pre>
         Welcome to Echobeads!
-        We handcraft unique jewelry using quality beads and a lot of creativity. Each bracelet is designed to reflect personal style and positive energy. Whether you love bright colors or something subtle and minimal, you’ll find a little echo of yourself in every piece we make.<br>
+        We handcraft unique jewelry using quality beads and a lot of creativity. <br>Each bracelet is designed to reflect personal style and positive energy. <br>Whether you love bright colors or something subtle and minimal, <br>you’ll find a little echo of yourself in every piece we make.<br>
     </pre>
   </main>
 </body>
