AI is too powerful

--- a/joy.html
+++ b/joy.html
@@ -8,10 +8,41 @@
     <h1></h1>
   </header>
   <main>
-    <pre>
-        Welcome to Echobeads!
-        We handcraft unique jewelry using quality beads and a lot of creativity. <br>Each bracelet is designed to reflect personal style and positive energy. <br>Whether you love bright colors or something subtle and minimal, <br>you’ll find a little echo of yourself in every piece we make.<br>
-    </pre>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Joyful Page</title>
+  <link rel="stylesheet" href="css/joy.css">
+</head>
+<body>
+  <div class="container">
+    <header>
+      <h1>Welcome to Joy!</h1>
+      <p>Discover happiness in every moment.</p>
+    </header>
+    <main>
+      <section>
+        <h2>Why Choose Joy?</h2>
+        <ul>
+          <li>Positive vibes</li>
+          <li>Modern design</li>
+          <li>Easy to use</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Get Started</h2>
+        <p>Click the button below to begin your joyful journey!</p>
+        <button class="btn">Start Now</button>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2025 Joyful Web. Crafted with love.</p>
+    </footer>
+  </div>
+</body>
+</html>
   </main>
 </body>
 </html>
