--- a/index_quote_first.html
+++ b/index_quote_first.html
@@ -9,21 +9,20 @@
 
   <div id="header-placeholder"></div>
 
-  <!-- HERO: typewriter quote, almost full screen -->
-  <section class="quote-section">
-    <div class="quote-inner">
-      <div class="quote-label">Scroll down, and remember</div>
-      <div class="quote-text" id="quote-text">
-        <span class="caret"></span>
-      </div>
-    </div>
-  </section>
-
-  <!-- MAIN CONTENT BELOW HERO -->
   <main class="page-main">
     <div class="page-main-inner">
 
-      <!-- COUNTDOWN PANEL -->
+      <!-- SECTION 1: Typewriter quote hero -->
+      <section class="quote-section">
+        <div class="quote-inner">
+          <div class="quote-label">Scroll down, and remember</div>
+          <div class="quote-text" id="quote-text">
+            <span class="caret"></span>
+          </div>
+        </div>
+      </section>
+
+      <!-- SECTION 2: Main countdown container -->
       <div class="container">
         <div class="title-row">
           <h1>Countdown to 2 November 2070</h1>
@@ -105,11 +104,11 @@
         </div>
 
         <button id="scroll-quote-btn" class="cta-btn" type="button">
-          What will you do with your next hour? ↓
+          Reflect on your time ↓
         </button>
       </div>
 
-      <!-- STATS SECTION -->
+      <!-- SECTION 3: Stats -->
       <section class="stats-section">
         <h2>What this time could contain</h2>
         <div class="stats-grid">
@@ -288,7 +287,7 @@
         </div>
       </section>
 
-      <!-- REFLECTION SECTION -->
+      <!-- SECTION 4: Reflection -->
       <section class="reflection-section">
         <div class="reflection-inner">
           <h2>What will you do with your next hour?</h2>
