--- a/index.html
+++ b/index.html
@@ -298,6 +298,9 @@
           <button id="save-reflection" class="cta-btn small" type="button">
             Save this intention
           </button>
+          <a href="journal.html" class="cta-btn small reflection-journal-link">
+            Open full journal →
+          </a>
           <div id="reflection-saved" class="reflection-saved"></div>
 
           <div id="reflection-previous" class="reflection-previous" style="display:none;">
