--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         <div id="full-countdown"></div>
 
-        <!-- Progress towards target -->
+        <!--c Progress towards target -->
         <div id="progress-wrapper">
           <div class="progress-label">
             <span>Journey to your target date</span>
